<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.DetailCharacterActivity">

    <RelativeLayout
        android:id="@+id/rlContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivPhoto"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerCrop"
            />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/btnBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="16dp"
            android:contentDescription="@string/go_back"
            />

    </RelativeLayout>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/rlContent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="-25dp"
        style="@style/MyCardView"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="32dp"
            >

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="12dp"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    >

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvAbout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_character"
                        android:textSize="22sp"
                        android:layout_margin="8dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textStyle="bold"
                        />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/tvAbout"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginHorizontal="24dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/name"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/darker_gray"
                        />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvNameCharacter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/tvAbout"
                        app:layout_constraintStart_toEndOf="@+id/tvName"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        tools:text="Name"
                        android:textSize="16sp"
                        android:textColor="@android:color/darker_gray"
                        />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/statusCharacter"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:src="@drawable/baseline_circle_green"
                        app:layout_constraintTop_toBottomOf="@id/tvAbout"
                        android:layout_marginTop="12dp"
                        app:layout_constraintStart_toEndOf="@+id/tvNameCharacter"
                        android:layout_marginHorizontal="8dp"
                        />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvGender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/tvName"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/gender"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/darker_gray"
                        />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvGenderCharacter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/tvName"
                        app:layout_constraintStart_toEndOf="@+id/tvGender"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginTop="8dp"
                        tools:text="gender"
                        android:textSize="16sp"
                        android:textColor="@android:color/darker_gray"
                        />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvSpecies"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/tvGender"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/species"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/darker_gray"
                        />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvSpeciesCharacter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/tvGender"
                        app:layout_constraintStart_toEndOf="@+id/tvSpecies"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginTop="8dp"
                        tools:text="species"
                        android:textSize="16sp"
                        android:textColor="@android:color/darker_gray"
                        />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvOrigin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/tvSpecies"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/origin"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/darker_gray"
                        />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvOriginCharacter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/tvSpecies"
                        app:layout_constraintStart_toEndOf="@+id/tvOrigin"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginTop="8dp"
                        tools:text="origin"
                        android:textSize="16sp"
                        android:textColor="@android:color/darker_gray"
                        />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/tvOrigin"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/last_location"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/darker_gray"
                        />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvLocationCharacter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/tvOrigin"
                        app:layout_constraintStart_toEndOf="@+id/tvLocation"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginTop="8dp"
                        tools:text="location"
                        android:textSize="16sp"
                        android:textColor="@android:color/darker_gray"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    >

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvEpisodes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/episodes"
                        android:textSize="22sp"
                        android:layout_margin="8dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textStyle="bold"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>